--- a/static-html/docker-compose.yml
+++ b/static-html/docker-compose.yml
@@ -6,19 +6,19 @@ services:
     image: nginx:alpine
     expose:
       - 80
-    environment:
-      VIRTUAL_HOST: static-html.foresee.icu
-      LETSENCRYPT_HOST: static-html.foresee.icu
-      LETSENCRYPT_EMAIL: 437808@gmail.com
-    depends_on:
-      - nginx-proxy
-      - nginx-proxy-gen
-      - nginx-proxy-le
     volumes:
       - ./src:/usr/share/nginx/html
     restart: unless-stopped
+#     environment:
+#       VIRTUAL_HOST: static-html.foresee.icu
+#       LETSENCRYPT_HOST: static-html.foresee.icu
+#       LETSENCRYPT_EMAIL: 437808@gmail.com
+#     depends_on:
+#       - nginx-proxy
+#       - nginx-proxy-gen
+#       - nginx-proxy-le
 
-networks:
-  default:
-    external:
-      name: nginx-proxy
+# networks:
+#   default:
+#     external:
+#       name: nginx-proxy
