--- a/jupyterlab/.gitignore
+++ b/jupyterlab/.gitignore
@@ -1,6 +1,3 @@
-neo4j-data
-neo4j-logs
-
 # macOS
 # =====
 
@@ -158,3 +155,16 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Jupyter
+# =======
+
+# gitignore template for Jupyter Notebooks
+# website: http://jupyter.org/
+
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
+#
