--- a/python-flask-postgres/Dockerfile
+++ b/python-flask-postgres/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.6-alpine
 
 WORKDIR app
 
+RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
+
 COPY ./src/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
